Fix pdf report and excel

--- a/src/app/Pages/addassessment-exp/addassessment-exp.component.html
+++ b/src/app/Pages/addassessment-exp/addassessment-exp.component.html
@@ -38,10 +38,11 @@
         <div class="input-group">
           <input
             type="text"
-            class="form-control form-control-sm my-input"
+            class="form-control-plaintext form-control-sm my-input"
             id="inlineFormInputGroupid"
             placeholder="122323"
             formControlName="id"
+            readonly
           />
         </div>
       </div>
@@ -641,7 +642,6 @@
                                         type="number"
                                         min="0"
                                         max="1"
-                                        maxlength="1"
                                         class="score-input"
                                         name="initial"
                                         formControlName="scoreInitial"
