--- a/src/app/Pages/dashboard/dashboard.component.html
+++ b/src/app/Pages/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid margintop">
+  <app-toast></app-toast>
   <!-- Main Content -->
   <div class="col-12">
     <div class="row">
@@ -105,33 +106,31 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Recent Transactions</h5>
+            <h5>Recent Trainings</h5>
             <table class="table">
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>User</th>
-                  <th>Amount</th>
                   <th>Status</th>
-                  <th>Date</th>
+                  <th>Training</th>
+                  <th>Trainer</th>
+                  <th>Assessments</th>
+                  <th>Start Date</th>
+                  <th>End Date</th>
                 </tr>
               </thead>
               <tbody>
+                @for (item of latestTrainings(); track $index) {
                 <tr>
-                  <td>1</td>
-                  <td>John Doe</td>
-                  <td>$120.00</td>
-                  <td>Complete</td>
-                  <td>2024-09-01</td>
+                  <td>{{ $index + 1 }}</td>
+                  <td>{{ item.status }}</td>
+                  <td>{{ item.name }}</td>
+                  <td>{{ getTrainerName(item.trainerid) }}</td>
+                  <td>{{ item.sessioncount }}</td>
+                  <td>{{ item.startdate }}</td>
+                  <td>{{ item.enddate }}</td>
                 </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Jane Smith</td>
-                  <td>$75.50</td>
-                  <td>Pending</td>
-                  <td>2024-09-03</td>
-                </tr>
-                <!-- More rows as needed -->
+                }
               </tbody>
             </table>
           </div>
