--- a/src/app/Pages/driversreport/driversreport.component.html
+++ b/src/app/Pages/driversreport/driversreport.component.html
@@ -80,10 +80,10 @@
                 class="btn btn-success"
                 type="submit"
                 [disabled]="formSelectContractor.invalid"
-                (click)="downloadDriverReport(drivers())"
+                (click)="downloadDriverReport()"
                 title="Download PDF"
               >
-                <i class="fa-solid fa-file-pdf me-1"></i>Driver Report
+                <i class="fa-solid fa-file-pdf me-1"></i>Generate Report
               </button>
               <button
                 class="btn btn-secondary ms-1"
