--- a/src/app/Pages/adddriver/adddriver.component.html
+++ b/src/app/Pages/adddriver/adddriver.component.html
@@ -11,7 +11,10 @@
     </div>
     <div class="col-auto text-success">
       <h2>Add Driver</h2>
-      <p>Please fill complete form to be insert driver data into database:</p>
+      <p>
+        Please complete all fields in the form to add the driver's information
+        to the database.:
+      </p>
     </div>
   </div>
   <hr />
