--- a/src/app/Pages/addtraining/addtraining.component.html
+++ b/src/app/Pages/addtraining/addtraining.component.html
@@ -11,7 +11,10 @@
     </div>
     <div class="col-auto text-primary">
       <h2>Add Training</h2>
-      <p>Please provide all necessary information in the training data form:</p>
+      <p>
+        Please complete all fields in the form to add the training's information
+        to the database.
+      </p>
     </div>
   </div>
   <hr />
