--- a/src/app/Pages/alldrivers/alldrivers.component.html
+++ b/src/app/Pages/alldrivers/alldrivers.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-auto">
       <h2>All Drivers</h2>
-      <p>You can select it my navigating one by one and edit it (if needed):</p>
+      <p>You can select it by navigating one by one and edit it (if needed):</p>
     </div>
   </div>
   <hr />
