--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -334,9 +334,9 @@
               <input
                 type="search"
                 class="form-control border border-warning border-2"
-                id="name"
+                id="sessionname"
                 placeholder="Session ID"
-                formControlName="name"
+                formControlName="sessionname"
               />
             </p>
             <p class="card-text">
