--- a/src/app/Pages/category/category.component.html
+++ b/src/app/Pages/category/category.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-auto">
       <h2>Category</h2>
-      <p>You can select it my navigating one by one and edit it (if needed):</p>
+      <p>You can select it by navigating one by one and edit it (if needed):</p>
     </div>
   </div>
   <hr />
