--- a/src/app/Pages/configureassessment/configureassessment.component.html
+++ b/src/app/Pages/configureassessment/configureassessment.component.html
@@ -12,7 +12,7 @@
     <div class="col-3">
       <h2>Assessment Configuration</h2>
       <p>
-        You can select it my navigating tabs and add - update - delete (if
+        You can select it by navigating tabs and add - update - delete (if
         needed):
       </p>
     </div>
