--- a/src/app/Pages/allassessments/allassessments.component.html
+++ b/src/app/Pages/allassessments/allassessments.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-auto">
       <h2>All Assessments</h2>
-      <p>You can select it my navigating one by one and edit it (if needed):</p>
+      <p>You can select it by navigating one by one and edit it (if needed):</p>
     </div>
   </div>
   <hr />
